--- a/public/index.css
+++ b/public/index.css
@@ -28,19 +28,23 @@ h1{
 
 #body{
     float: left;
-    background-color: whitesmoke;
+    background-color: white;
     padding-left: 25px;
     padding-right: 25px;
-    width:400px;
+    width:700px;
     height: 500px;
+    position: relative;
 
 }
 
 #about{
+    right:0px;
     float: left;
-    background-color: whitesmoke;
-    padding-left: 4px;
-    padding-right: 4px;
+    margin:2px;
+    background-color: white;
+    width:200px;
+    height:500px;
+
 }
 
 table#navtable{
@@ -49,35 +53,45 @@ table#navtable{
 
 }
 
+#about_me{
+
+    padding:5px;
+    width:190px;
+    height:200px;
+}
+
 
 table#navtable td{
     text-align: center;
-    border-bottom: solid 1px;
-    border-color: #22d15c;
+    #border-bottom: solid 1px;
+    #border-color: #22d15c;
     padding:0px
 
 }
 
 a:link{
     background-color: mediumseagreen;
+    border-style: outset;
     text-decoration: none;
     color: whitesmoke;
-    padding: 30px;
-
-
-
+    padding: 25px;
 }
 
 a:visited{
     background-color: mediumseagreen;
     text-decoration: none;
-    color: whitesmoke;
-    padding: 30px;
-
+    color: white;
+    padding: 25px;
 }
 
 a:hover{
     background-color: #22d15c;
 }
 
-a:active
+a:active{
+    background-color: #22d15c;
+    border-style: inset;
+    text-decoration: none;
+    color: whitesmoke;
+    padding: 25px;
+}
