--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,10 +8,6 @@ h1{
     border-style: groove;
     border-color: seagreen;
     text-align: center;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-right:0px;
-    margin-bottom:5px;
 
 
 }
@@ -19,79 +15,35 @@ h1{
 #nav{
     float: left;
     background-color: mediumseagreen;
-    border-style: groove;
-    border-color: seagreen;
-    padding-left: 4px;
-    padding-right: 4px;
-    margin-top: 0px;
+    margin:0;
+}
+
+.nav-sidebar{
+    margin-right: -21px; /* 20px padding + 1px border */
+    margin-bottom: 20px;
+    margin-left: -20px;
+}
+.nav-sidebar > li > a,
+.nav-sidebar > li >  a:hover,
+.nav-sidebar > li >  a:focus {
+    background-color: #6bb590;
+    text-decoration: none;
+    color: whitesmoke;
+    margin:0;
+}
+.nav-sidebar > li > a:hover{
+    color: #6bb590;
 }
 
 #body{
-    float: left;
-    background-color: white;
-    padding-left: 25px;
-    padding-right: 25px;
-    width:700px;
-    height: 500px;
-    position: relative;
-
+    background-color: #6bb590;
 }
 
 #about{
-    right:0px;
-    float: left;
-    margin:2px;
-    background-color: white;
-    width:200px;
-    height:500px;
-
+    background-color: #6bb590;
 }
 
-table#navtable{
-    width: 150px;
-    height: 500px;
-
+.Header{
+    background-color: #6bb590;
 }
 
-#about_me{
-
-    padding:5px;
-    width:190px;
-    height:200px;
-}
-
-
-table#navtable td{
-    text-align: center;
-    #border-bottom: solid 1px;
-    #border-color: #22d15c;
-    padding:0px
-
-}
-
-a:link{
-    background-color: mediumseagreen;
-    border-style: outset;
-    text-decoration: none;
-    color: whitesmoke;
-    padding: 25px;
-}
-
-a:visited{
-    background-color: mediumseagreen;
-    text-decoration: none;
-    color: white;
-    padding: 25px;
-}
-
-a:hover{
-    background-color: #22d15c;
-}
-
-a:active{
-    background-color: #22d15c;
-    border-style: inset;
-    text-decoration: none;
-    color: whitesmoke;
-    padding: 25px;
-}
