--- a/public/Project_proposal/index.css
+++ b/public/Project_proposal/index.css
@@ -97,3 +97,10 @@ h3{
     background-color: white !important;
     color:#6bb590 !important;
 }
+
+
+.frame-container  .ratio {display: none;width:100%;height:100%}
+.frame-container  iframe {position:relative;top:0;left:0;width:100%; height:550px; }
+.frame-container {
+    padding-top:25px;
+}
