--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -33,20 +33,18 @@
                             Action
                         </th>
                     </tr>
-                    </thead>
-                    <tbody>
                     <tr>
                         <td>
-                            <input type="text" placeholder="Username">
+                            <input ng-model="user.username" class="form-control" placeholder="Username">
                         </td>
                         <td>
-                            <input type="text" placeholder="Password">
+                            <input ng-model="user.password" class="form-control" placeholder="Password">
                         </td>
                         <td>
-                            <input type="text" placeholder="Role 1, Role 2">
+                            <input ng-model="user.roles" class="form-control" placeholder="Role 1, Role 2">
                         </td>
                         <td>
-                            <button type="button" class="btn btn-default">
+                            <button ng-click="addUser(user)" class="btn btn-default">
                                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                             </button>
                             <button type="button" class="btn btn-default">
@@ -54,48 +52,21 @@
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Alice</td>
-                        <td></td>
-                        <td>Student</td>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="user in users">
+                        <td>{{user.firstName}}</td>
+                        <td>{{user.password}}</td>
+                        <td>{{user.roles}}</td>
                         <td>
-                            <button type="button" class="btn btn-default">
+                            <button ng-click="editUser(user)" class="btn btn-default">
+                                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                            </button>
+                            <button ng-click="deleteUser(user)" class="btn btn-default">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td>Bob</td>
-                        <td></td>
-                        <td>faculty | admin</td>
-                        <td>
-                            <button type="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td>Charlie</td>
-                        <td></td>
-                        <td></td>
-                        <td>
-                            <button type="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </button>
                         </td>
                     </tr>
-
                     </tbody>
                 </table>
             </div>
