--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -11,79 +11,47 @@
 <div class="container-fluid">
         <h1 class="page-header">Forms</h1>
 
-        <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="./forms.view.html">Forms</a></li>
-            <li role="presentation"><a href="form-fields.view.html">fields</a></li>
 
-        </ul>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>
-                            <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
                             Form Name
                         </th>
                         <th>
-                            <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
                             Action
                         </th>
                     </tr>
+                    <tr>
+                        <td>
+                            <input ng-model="form.title" placeholder="Form Name">
+                        </td>
+                        <td>
+                            <button ng-click="addForm(form)" class="btn button-default">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </button>
+                            <button class="btn button-default">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </button>
+                        </td>
+                    </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                            <input type="text" placeholder="Form Name">
-                        </td>
-                        <td>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true">
-                            </button>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Registration Form
-                        </td>
-                        <td>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Contact List
-                        </td>
-                        <td>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            To Do List
-                        </td>
-                        <td>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                            <button class="btn button-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                    </tr>
 
+                    <tr ng-repeat="form in forms">
+                        <td>
+                            {{form.title}}
+                        </td>
+                        <td>
+                            <button ng-click="deleteForm(form)" class="btn button-default">
+                                <span  class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </button>
+                            <button class="btn button-default">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </button>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
                 </div>
