--- a/public/projectPOC/views/profile/profile.view.html
+++ b/public/projectPOC/views/profile/profile.view.html
@@ -5,6 +5,36 @@
     <title>Title</title>
 </head>
 <body>
+<div class="login container-fluid  col-sm-4">
+
+    <div align="center" class="login-link">
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="First Name">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Last Name">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Email">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Username">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Password">
+        </div>
+        <form role="form">
+            <div class="radio">
+                <label><input type="radio" aria-label="artist-radio" name="optregister"> Artist </label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" aria-label="enthusiast-radio" name="optregister">Art Enthusiast</label>
+            </div>
+        </form>
+    </div>
+    <button class="login-link">Register</button>
+
+</div>
 
 </body>
 </html>
