--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{'active' : $location.url() == '/register'}"><a href="#/register">Register</a></li>
                 <li ng-class="{'active' : $location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li><a href="#">{{$rootScope.username}}</a></li>
+                <li><a href="#">{{$rootScope.currentUser.firstName}}</a></li>
                 <li ng-click="logout"><a href="#">Logout</a></li>
             </ul>
             <!-- Commented out search bar
