--- a/public/projectPOC/views/header/header.view.html
+++ b/public/projectPOC/views/header/header.view.html
@@ -8,14 +8,20 @@
 <nav class="navbar navbar-fixed-top">
     <div class="container-fluid">
 
-
+    <div class="row">
+        <div class="col-xs-4">
             <form class="wrapper navbar-form navbar-left">
                 <input type="text" class="form-control" placeholder="Search...">
+                <!--
                 <button class="glyphicon glyphicon-search nav-button" aria-hidden="true"></button>
+                -->
             </form>
+        </div>
 
-        <div class="text-primary nav navbar-left navbar-title">
-            THIS IS THE TITLE
+        <div class="col-xs-offset-1 col-xs-4">
+            <div align="center">
+                <a href="#/home" class="text-primary nav navbar-left navbar-title"> THIS IS THE TITLE </a>
+            </div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -23,6 +29,7 @@
                 <li ng-class="{'active' : $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
             </ul>
         </div>
+    </div>
 
     </div>
 </nav>
