--- a/public/projectPOC/views/register/register.view.html
+++ b/public/projectPOC/views/register/register.view.html
@@ -4,20 +4,42 @@
 </head>
 <body>
 
-<div class="login container-fluid">
+<div class="login container-fluid col-sm-offset-3 col-sm-6">
 
-    <div align="center">
-    <input class="login-fields form-control" type="text" placeholder="username">
-    <br>
-    <input class="login-fields form-control" type="text" placeholder="password">
-    <br>
-    <button class="login-fields">Login</button>
+    <div align="center" class="login-link">
+        <div class="row">
+             <input class="login-fields form-control" type="text" placeholder="First Name">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Last Name">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Email">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Username">
+        </div>
+        <div class="row">
+            <input class="login-fields form-control" type="text" placeholder="Password">
+        </div>
+        <form role="form">
+            <div class="radio">
+                <label><input type="radio" aria-label="artist-radio" name="optregister"> Artist </label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" aria-label="enthusiast-radio" name="optregister">Art Enthusiast</label>
+            </div>
+        </form>
+        </div>
+    <button class="login-fields">Register</button>
     <hr>
-    <a href="#/login">Login</a>
-    <a href="#/register">Register</a>
-    </div>
-
+        <ul class="nav navbar-nav">
+            <li ng-class="{'active' : $location.url() == '/login'}"><a href="#/login">Login</a></li>
+            <li ng-class="{'active' : $location.url() == '/register'}"><a href="#/register">Register</a></li>
+        </ul>
 </div>
+
+
 
 </body>
 </html>
