--- a/public/projectPOC/views/profile/profile.view.html
+++ b/public/projectPOC/views/profile/profile.view.html
@@ -7,7 +7,7 @@
 <body>
 <div class="login container-fluid  col-sm-4">
 
-    <div align="center" class="login-link">
+    <div align="center" class="view-fields">
         <div class="row">
             <input class="login-fields form-control" type="text" placeholder="First Name">
         </div>
@@ -25,14 +25,16 @@
         </div>
         <form role="form">
             <div class="radio">
-                <label><input type="radio" aria-label="artist-radio" name="optregister"> Artist </label>
+                <label  class="radio-text"><input type="radio" aria-label="artist-radio" name="optregister"> Artist </label>
             </div>
             <div class="radio">
-                <label><input type="radio" aria-label="enthusiast-radio" name="optregister">Art Enthusiast</label>
+                <label class="radio-text"><input type="radio" aria-label="enthusiast-radio" name="optregister">Art Enthusiast</label>
             </div>
         </form>
     </div>
-    <button class="login-link">Register</button>
+    <div align="center">
+    <button class="login-link">Update</button>
+    </div>
 
 </div>
 
