--- a/public/projectPOC/views/header/header.view.html
+++ b/public/projectPOC/views/header/header.view.html
@@ -20,7 +20,7 @@
 
         <div class="col-xs-offset-1 col-xs-4">
             <div align="center">
-                <a href="#/home" class="text-primary nav navbar-left navbar-title"> THIS IS THE TITLE </a>
+                <a href="#/home" class="text-primary nav navbar-left navbar-title"> {{$rootScope.titleText}} </a>
             </div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
