--- a/public/projectPOC/views/login/login.view.html
+++ b/public/projectPOC/views/login/login.view.html
@@ -13,14 +13,15 @@
         <div class="row">
             <input class="login-fields form-control" type="text" placeholder="Password">
         </div>
-    <button class="login-fields">Login</button>
+    <button class="login-link" style="margin-top: 15px">Login</button>
     <hr>
-        <ul class="nav navbar-nav">
+    <div align="center" class="login-link">
+        <ul class="nav navbar-nav nav-login">
             <li ng-class="{'active' : $location.url() == '/login'}"><a href="#/login">Login</a></li>
             <li ng-class="{'active' : $location.url() == '/register'}"><a href="#/register">Register</a></li>
         </ul>
     </div>
-
+    </div>
 </div>
 
 </body>
