--- a/public/projectPOC/views/register/register.view.html
+++ b/public/projectPOC/views/register/register.view.html
@@ -8,19 +8,16 @@
 
     <div align="center" class="login-link">
         <div class="row">
-             <input class="login-fields form-control" type="text" placeholder="First Name">
+             <input ng-model="user.firstName" class="login-fields form-control"  placeholder="First Name">
         </div>
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Last Name">
+            <input ng-model="user.lastName" class="login-fields form-control"  placeholder="Last Name">
         </div>
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Email">
+            <input ng-model="user.username" class="login-fields form-control"  placeholder="Username">
         </div>
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Username">
-        </div>
-        <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Password">
+            <input ng-model="user.password" class="login-fields form-control" placeholder="Password">
         </div>
         <form role="form">
             <div class="radio">
@@ -31,12 +28,16 @@
             </div>
         </form>
         </div>
-    <button class="login-fields">Register</button>
+    <div align="center">
+        <button ng-click="newUser(user)" class="login-fields login-link">Register</button>
+    </div>
     <hr>
-        <ul class="nav navbar-nav">
+    <div class="login-link" align="center">
+        <ul class="nav navbar-nav nav-login">
             <li ng-class="{'active' : $location.url() == '/login'}"><a href="#/login">Login</a></li>
             <li ng-class="{'active' : $location.url() == '/register'}"><a href="#/register">Register</a></li>
         </ul>
+    </div>
 </div>
 
 
