--- a/public/projectPOC/views/profile/profile.view.html
+++ b/public/projectPOC/views/profile/profile.view.html
@@ -9,19 +9,16 @@
 
     <div align="center" class="view-fields">
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="First Name">
+            <input class="login-fields form-control" type="text" placeholder="{{profileUser.firstName}}">
         </div>
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Last Name">
+            <input class="login-fields form-control" type="text" placeholder="{{profileUser.lastName}}">
         </div>
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Email">
+            <input class="login-fields form-control" type="text" placeholder="{{profileUser.username}}">
         </div>
         <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Username">
-        </div>
-        <div class="row">
-            <input class="login-fields form-control" type="text" placeholder="Password">
+            <input class="login-fields form-control" type="text" placeholder="{{profileUser.password}}">
         </div>
         <form role="form">
             <div class="radio">
