--- a/public/projectPOC/views/header/header.view.html
+++ b/public/projectPOC/views/header/header.view.html
@@ -20,13 +20,13 @@
 
         <div class="col-xs-offset-1 col-xs-4">
             <div align="center">
-                <a href="#/home" class="text-primary nav navbar-left navbar-title"> {{$rootScope.titleText}} </a>
+                <a href="#/home" class="text-primary nav navbar-left navbar-title"> Art Gallery </a>
             </div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{'active' : $location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li ng-class="{'active' : $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
+                <li ng-class="{'active' : $location.url() == '/profile-admin'}"><a href="#/profile-admin">Profile</a></li>
             </ul>
         </div>
     </div>
