--- a/public/projectPOC/client/views/home/home.view.html
+++ b/public/projectPOC/client/views/home/home.view.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 
-
-
+<button ng-click="setAdmin()" class="btn btn-default">
+    admin
+</button>
+<button ng-click="setProfile()" class="btn btn-default">
+    profile
+</button>
 
 </body>
 </html>
