picture detail views and controller service updates

--- a/public/projectPOC/client/views/profile/profile.view.html
+++ b/public/projectPOC/client/views/profile/profile.view.html
@@ -12,19 +12,19 @@
     <div align="center" class="view-fields">
         <div class="row">
             <input ng-model="profileUser.firstName" class="login-fields form-control"
-                   type="text" >
+                   type="text" placeholder="First Name">
         </div>
         <div class="row">
             <input ng-model="profileUser.lastName" class="login-fields form-control"
-                   type="text" placeholder="{{profileUser.lastName}}">
+                   type="text" placeholder="Last Name">
         </div>
         <div class="row">
             <input ng-model="profileUser.username" class="login-fields form-control"
-                   type="text" placeholder="{{profileUser.username}}">
+                   type="text" placeholder="Username">
         </div>
         <div class="row">
             <input ng-model="profileUser.password" class="login-fields form-control"
-                   type="text" placeholder="{{profileUser.password}}">
+                   type="text" placeholder="Password">
         </div>
         <form role="form">
             <div class="radio">
