--- a/public/projectPOC/client/views/detail/detail.view.html
+++ b/public/projectPOC/client/views/detail/detail.view.html
@@ -4,20 +4,45 @@
 </head>
 <body>
 
-<div class="col-sm-offset-2 col-sm-8" style="background-color: #22d15c">
-    <h1>eutbhourehguarengiuna</h1>
+<div class="row col-sm-offset-2 col-sm-8" style="background-color: whitesmoke">
+    <div class="col-sm-1">
+        <button class="glyphicon glyphicon-chevron-left"></button>
+    </div>
+    <div class="col-sm-10" align="center">
+        <h1>Picture</h1>
+    </div>
+    <div class="col-sm-1">
+        <button class="glyphicon glyphicon-chevron-right"></button>
+    </div>
 </div>
-<div class="login container-fluid col-sm-offset-2  col-sm-8" style="background-color: #22d15c">
+<div class="login container-fluid col-sm-offset-2  col-sm-8" style="background-color: whitesmoke">
 <table class="table-responsive table-striped">
+    <thead>
+    </thead>
     <tbody>
     <tr ng-repeat="comment in comments">
-        <td>{{comment.user}}</td>
-        <td>{{comment.comment}}</td>
+        <td ng-hide="currentUser.username==comment.username">
+            &nbsp;
+        </td>
+        <td ng-show="currentUser.username==comment.username">
+            <button ng-click="deleteCommentById(comment._id)"
+                    class="glyphicon glyphicon-remove"></button>
+        </td>
+        <td><strong>{{comment.username}}: </strong></td>
+        <td>{{comment.message}}</td>
     </tr>
-
     </tbody>
 </table>
-
+    <div class="row">
+        <div class="col-sm-10">
+                <input  ng-model="message"
+                        type="text" class="form-control">
+        </div>
+        <div class="col-sm-2">
+                <button ng-click="createMessage(message)"
+                        class="btn-sm glyphicon glyphicon-send"></button>
+        </div>
+    </div>
 </div>
 
 </body>
