--- a/public/projectPOC/client/views/detail/detail.view.html
+++ b/public/projectPOC/client/views/detail/detail.view.html
@@ -10,7 +10,7 @@
                 class="glyphicon glyphicon-chevron-left"></button>
     </div>
     <div class="col-sm-10" align="center">
-        {{photos[photoIndex]}}
+        <img src={{$scope.photos[$rootScope.photoIndex].picture}} style="width:300px;height:320px;">
     </div>
     <div class="col-sm-1">
         <button ng-click="next()"
