--- a/public/projectPOC/client/views/home/home.view.html
+++ b/public/projectPOC/client/views/home/home.view.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 
-<a href="#/detail">detail</a>
+<div
+        ng-repeat="photo in photos"
+        ng-click="detailView($index)"
+        class="col-sm-4">
+        <img src={{photo.picture}} style="width:300px;height:320px;">
 
-<ul>
-    <li ng-repeat="photo in photos"
-        ng-click="detailView($index)">{{photo.picture}}</li>
-</ul>
+</div>
 
 </body>
 </html>
