--- a/public/projectPOC/client/views/home/home.view.html
+++ b/public/projectPOC/client/views/home/home.view.html
@@ -9,8 +9,8 @@
 <div
         ng-repeat="photo in photos"
         ng-click="detailView($index)"
-        class="col-sm-4">
-        <img src={{photo.picture}} style="width:300px;height:320px;">
+        class="col-sm-4 col-xs-6">
+        <img src={{photo.picture}} style="width:375px;height:370px;">
 
 </div>
 
