--- a/public/projectPOC/client/views/header/header.view.html
+++ b/public/projectPOC/client/views/header/header.view.html
@@ -10,17 +10,8 @@
     <div class="container-fluid">
 
     <div class="row">
-        <div class="col-xs-4">
-            <form class="wrapper navbar-form navbar-left">
-                <input ng-model="user" class="form-control" placeholder="Search Users...">
 
-                <button ng-click="searchUser()"
-                        class="glyphicon glyphicon-search nav-button" aria-hidden="true"></button>
-
-            </form>
-        </div>
-
-        <div class="col-xs-offset-1 col-xs-4">
+        <div >
             <div align="center">
                 <a href="#/home" class="text-primary nav navbar-left navbar-title"> Art Gallery </a>
             </div>
