--- a/public/projectPOC/client/css/project.css
+++ b/public/projectPOC/client/css/project.css
@@ -154,4 +154,22 @@ a:visited{
     float:right;
     margin-right: 40px;
 }
+.detail{
+    border-top-left-radius: 10px;
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    border-top-right-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-topright: 10px;
+    background-color:#428bca ;
+}
 
+.detail-comment{
+    border-bottom-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    border-bottom-right-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    background-color:#428bca ;
+}
