--- a/public/projectPOC/client/views/detail/detail.view.html
+++ b/public/projectPOC/client/views/detail/detail.view.html
@@ -4,29 +4,36 @@
 </head>
 <body>
 
-<div class="row col-sm-offset-2 col-sm-8">
-    <div>
-        <button ng-class="col-sm-1"
-                ng-click="previous()"
-                class="glyphicon glyphicon-chevron-left"></button>
-    </div>
-    <div class="col-sm-offset-4 col-sm-1">
-        <button ng-show="currentUser"
-                ng-click="favoritePhoto()"
-                class="glyphicon glyphicon-plus"></button>
-    </div>
-    <div class="col-sm-offset-4 col-sm-1">
-        <button ng-click="next()"
-                class="glyphicon glyphicon-chevron-right"></button>
-    </div>
-    <div class="row col-sm-12">
-        <div align="center">
-            <img src={{photos[photoIndex].picture}} style="width:100%;height:100%;">
+<div class="detail row col-sm-offset-2 col-sm-8" style="background-color: #428bca">
+    <div align="center">
+        <div>
+            <button
+                    ng-click="previous()"
+                    class="glyphicon glyphicon-chevron-left col-sm-1" style="float: left"></button>
+
+        </div>
+        <div>
+            <button ng-show="currentUser"
+                    ng-click="favoritePhoto()"
+                    class="glyphicon glyphicon-plus col-sm-offset-4 col-sm-1"></button>
+        </div>
+        <div>
+            <button ng-show="currentUser"
+                    ng-click="next()"
+                    class="glyphicon glyphicon-chevron-right col-sm-offset-4 col-sm-1"></button>
+            <button ng-hide="currentUser"
+                    ng-click="next()"
+                    class="glyphicon glyphicon-chevron-right col-sm-1" style="float: right"></button>
+        </div>
+        <div class="row col-sm-12">
+            <div align="center">
+                <img src={{photos[photoIndex].picture}} style="width:100%;height:100%;">
+            </div>
         </div>
     </div>
 </div>
 
-<div class="login container-fluid col-sm-offset-2  col-sm-8" style="background-color: whitesmoke">
+<div class="detail-comment container-fluid col-sm-offset-2  col-sm-8">
 <table class="table-responsive table-striped" style="width: 100%">
     <thead>
     </thead>
